# imu-package

./: .gitignore  README.md  code.cpp
src/: FailureInjector.cpp  FailureInjector.h  IMUEmulator.cpp  IMUEmulator.h  IMUInterface.cpp  IMUInterface.h  main.cpp
tests/: CMakeLists.txt  test_FailureInjector.cpp  test_IMUEmulator.cpp  test_IMUInterface.cpp
